[gd_scene load_steps=5 format=1]

[ext_resource path="res://scenes/Player.gd" type="Script" id=1]
[ext_resource path="res://images/sprites/player_tuto_light/rest.png" type="Texture" id=2]
[ext_resource path="res://scenes/Inventory.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 46.9572, 10 )

[node name="Player" type="KinematicBody2D"]

transform/pos = Vector2( 170.195, 516.737 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1.18252, 0, 0, 12.6923, -5.24933, 5.52844 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 1 )
shapes/1/transform = Matrix32( 1.18252, 0, 0, 6.37479, -6.87834, 67.5539 )
shapes/1/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="Body" type="Sprite" parent="."]

texture = ExtResource( 2 )
hframes = 4

[node name="Inventory" type="Node2D" parent="Body"]

script/script = ExtResource( 3 )

[node name="normal_collision" type="CollisionShape2D" parent="."]

transform/pos = Vector2( -5.24933, 5.52844 )
transform/scale = Vector2( 1.18252, 12.6923 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="crouch_collision" type="CollisionShape2D" parent="."]

transform/pos = Vector2( -6.87834, 67.5539 )
transform/scale = Vector2( 1.18252, 6.37479 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 1

[node name="jump_delay" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="input_event" from="." to="." method="_on_Player_input_event"]

[connection signal="timeout" from="jump_delay" to="." method="_on_jump_delay_timeout"]


